# Query-Aware-Recommender

./: .gitignore  README.md  pyproject.toml  test.ipynb
qaware/: pyproject.toml
qaware/src/qaware/: __init__.py
src/qaware/: __init__.py  baselines.py  sequences.py
tests/: __init__.py  test_baselines.py  test_sequences.py
