[project]
name = "qaware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Laura", email = "lauratoivanen70@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "rich>=14.3.2",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
]

[project.scripts]
qaware = "qaware:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
api = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.41.0",
]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kaggle>=2.0.0",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
nlp = [
    "faiss-cpu>=1.13.2",
    "rapidfuzz>=3.14.3",
    "sentence-transformers>=5.2.3",
]
