[project]
name = "qaware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Laura", email = "lauratoivanen70@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
qaware = "qaware:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
